# KaiVM

./: README.md  analyze_image.py  check_size.py  install.sh  pyproject.toml  requirements.txt
kaivm/: calibrate.py  cli.py  diagnose.py  display.py  server.py
kaivm/agent/: runner.py  validate.py
kaivm/capture/: daemon.py  ffmpeg_mjpeg.py
kaivm/gemini/: client.py  prompts.py  schema.py
kaivm/hid/: keyboard.py  mouse.py  udc.py
kaivm/static/: index.html
kaivm/util/: image.py  log.py  paths.py
scripts/: install-kaivm-hid.sh  kaivm-agent.service  kaivm-capture.service  kaivm-hid-gadget.py  kaivm-hid.service
