[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kaivm"
version = "0.1.0"
description = "kaiVM: Pi-based KVM HID + UVC capture + Gemini 3 agent PoC"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "google-genai>=0.7.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
  "pydantic>=2.0.0",
  "Pillow>=10.0.0",
  "python-multipart",
  "luma.lcd",
  "spidev",
  "RPi.GPIO",
]

[project.scripts]
kaivm = "kaivm.cli:main"

